Updated colors in CSS

--- a/app/webroot/css/materialize.css
+++ b/app/webroot/css/materialize.css
@@ -94,7 +94,7 @@
   color: #EF5350 !important; }
 
 .red {
-  background-color: #F44336 !important; }
+  background-color: #DC4339 !important; }
 
 .red-text {
   color: #F44336 !important; }
@@ -514,7 +514,7 @@
   color: #42A5F5 !important; }
 
 .blue {
-  background-color: #2196F3 !important; }
+  background-color: #3D83f7 !important; }
 
 .blue-text {
   color: #2196F3 !important; }
@@ -850,7 +850,7 @@
   color: #66BB6A !important; }
 
 .green {
-  background-color: #4CAF50 !important; }
+  background-color: #20A760 !important; }
 
 .green-text {
   color: #4CAF50 !important; }
@@ -1102,7 +1102,7 @@
   color: #ffee58 !important; }
 
 .yellow {
-  background-color: #ffeb3b !important; }
+  background-color: #FFE233 !important; }
 
 .yellow-text {
   color: #ffeb3b !important; }
